@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.128 2007/01/18 15:35:42 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.129 2007/01/22 16:29:54 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -174,6 +174,17 @@ Version 4.67
     in a client, the order in the tls_require_ciphers list specifies a
     preference order for the cipher algorithms. The first one in the client's
     list that is also advertised by the server is tried first.
+
+ 4. There is a new compile-time option called ENABLE_DISABLE_FSYNC. You must
+    not set this option unless you really, really, really understand what you
+    are doing. No pre-compiled distributions of Exim should ever set this
+    option. When it is set, Exim compiles a runtime option called
+    disable_fsync. If this is set true, Exim no longer calls fsync() to force
+    updated files' data to be written to disc. Unexpected events such as
+    crashes and power outages may cause data to be lost or scrambled. Beware.
+
+    When ENABLE_DISABLE_FSYNC is not set, a reference to disable_fsync in a
+    runtime configuration generates an "unknown option" error.
 
 
 Version 4.66
