@@ -1,4 +1,4 @@
-# $Cambridge: exim/exim-src/src/EDITME,v 1.19 2006/12/08 03:16:48 jetmore Exp $
+# $Cambridge: exim/exim-src/src/EDITME,v 1.20 2007/01/22 16:29:54 ph10 Exp $
 
 ##################################################
 #          The Exim mail transport agent         #
@@ -1116,5 +1116,21 @@ TMPDIR="/tmp"
 # messages become "invisible" to the normal management tools.
 
 # SUPPORT_MOVE_FROZEN_MESSAGES=yes
+
+
+#------------------------------------------------------------------------------
+# Disabling the use of fsync(): DO NOT UNCOMMENT THE FOLLOWING LINE unless you
+# really, really, really know what you are doing. And even then, think again.
+# You should never uncomment this when compiling a binary for distribution.
+# Use it only when compiling Exim for your own use.
+#
+# Uncommenting this line enables the use of a runtime option called
+# disable_fsync, which can be used to stop Exim using fsync() to ensure that
+# files are written to disc before proceeding. When this is disabled, crashes
+# and hardware problems such as power outages can cause data to be lost. This
+# feature should only be used in very exceptional circumstances. YOU HAVE BEEN
+# WARNED.
+
+# ENABLE_DISABLE_FSYNC=yes
 
 # End of EDITME for Exim 4.
